# fastapi-customers-api-demo

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  obs-audit-metrics-report.md  obs-audit-report.md  pyproject.toml
.claude/: observability.md
.claude/commands/: obs-apply-logging.md  obs-apply-metrics.md  obs-apply-tracing.md  obs-apply.md  obs-audit-logging.md  obs-audit-metrics.md  obs-audit-tracing.md  obs-audit.md  obs-setup.md
.claude/observability/: checklist-logging.md  checklist-metrics.md  checklist-setup.md  checklist-tracing.md  logging.md  metrics-catalog.md  metrics.md  setup.md  tracing.md
.cursor/commands/: obs-apply-logging.md  obs-apply-metrics.md  obs-apply-tracing.md  obs-audit-logging.md  obs-audit-metrics.md  obs-audit-tracing.md  obs-audit.md  obs-setup.md
.cursor/rules/: logging.mdc  metrics-catalog.mdc  metrics.mdc  setup.mdc  tracing.mdc
init/: 00_schema.sql  01_seeds.sql
src/: database.py  main.py  settings.py
src/models/: customer.py
src/observability/: __init__.py  setup.py
src/repositories/: customer.py  customer_repository.py  customers_db.json
src/routes/: customer.py  healthcheck.py
src/schemas/: customer.py
src/scripts/: generate_customers.py
